<resources>
    <string name="app_name">BayMax</string>
    <string name="connect_to_device">连接设备</string>
    <string name="take_photos">拍照</string>
    <string name="front_text">前</string>
    <string name="behind_text">后</string>
    <string name="left_text">左</string>
    <string name="right_text">右</string>
    <string name="up_text">上</string>
    <string name="down_text">下</string>
    <string name="catch_text">抓</string>
    <string name="put_text">放</string>
    <string name="direction_info">位置信息： </string>
</resources>
