<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/button_connect_to_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/component_border_line"
            android:layout_marginLeft="20dp"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="2dp"
            android:text="@string/connect_to_device"/>

        <TextView
            android:id="@+id/button_take_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingBottom="2dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="2dp"
            android:background="@drawable/component_border_line"
            android:text="@string/take_photos"/>

        <TextView
            android:id="@+id/show_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingBottom="2dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2dp"
            android:background="@drawable/component_border_line"
            android:text="@string/direction_info"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/circle_image_button"
                android:layout_marginBottom="40dp"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="bottom"
                android:background="@drawable/circle_button"/>
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginBottom="40dp"
                android:layout_gravity="bottom"
                android:id="@+id/root"
                android:orientation="horizontal">
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_gravity="bottom"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/front_text"/>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_height="260dp"
                        android:layout_width="50dp"
                        android:background="@drawable/button_background"/>
                    <LinearLayout
                        android:id="@+id/layout_first_button"
                        android:layout_height="260dp"
                        android:layout_width="50dp"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">
                    </LinearLayout>
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/behind_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_gravity="bottom"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/left_text"/>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_height="260dp"
                        android:layout_width="50dp"
                        android:background="@drawable/button_background"/>
                    <LinearLayout
                        android:id="@+id/layout_second_button"
                        android:layout_height="260dp"
                        android:layout_width="50dp"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">
                    </LinearLayout>
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/right_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_gravity="bottom"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/up_text"/>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_height="260dp"
                        android:layout_width="50dp"
                        android:background="@drawable/button_background"/>
                    <LinearLayout
                        android:id="@+id/layout_third_button"
                        android:layout_height="260dp"
                        android:layout_width="50dp"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">
                    </LinearLayout>
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/down_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_gravity="bottom"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/catch_text"/>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_height="260dp"
                        android:layout_width="50dp"
                        android:background="@drawable/button_background"/>
                    <LinearLayout
                        android:id="@+id/layout_forth_button"
                        android:layout_height="260dp"
                        android:layout_width="50dp"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">
                    </LinearLayout>
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/put_text"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
